--- a/index.html
+++ b/index.html
@@ -1,3 +1,53 @@
-<html>
-Hello world
-<html>
+<!DOCTYPE html>
+<html lang="ko">
+
+<head>
+   <meta charset="UTF-8">
+   <title>HTML Layouts</title>
+   <style>
+      #header {
+         background-color:lightcyan;
+         color:black;
+         text-align:center; 
+         height:100px;
+         padding-top:10px;
+      }
+      #nav {
+         background-color:lightblue;
+         color:black;
+         width:150px;
+         height:300px;
+         float:left;
+         text-align:left;
+      }
+      #section {
+         width:200px;
+         text-align:left;
+         float:left;
+         padding:10px;
+      }
+   </style>
+</head>
+
+<body>
+
+   <div id="header">
+      <h1>자기소개</h1>
+   </div>
+   <div id="nav">
+      <h3><a href="">기본 인적사항</a></h3>
+      <h3>취미</h3>
+   </div>
+   <div id="section">
+       <ul>
+        <h3>
+            <li>이름</li>
+            <li>학번</li>
+            <li>생년월일</li>
+            <li>사는곳</li>
+        </h3>   
+       </ul>
+       <img src="C:\Users\user\Desktop\다운로드.png" alt="">
+</body>
+
+</html>
