--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
       #nav {
          background-color:lightblue;
          color:black;
-         width:150px;
-         height:300px;
+         width:200px;
+         height:750px;
          float:left;
-         text-align:left;
+         text-align:center;
       }
       #section {
-         width:200px;
          text-align:left;
-         float:left;
-         padding:10px;
+         line-height:50px;
       }
    </style>
 </head>
@@ -35,19 +33,20 @@
       <h1>자기소개</h1>
    </div>
    <div id="nav">
-      <h3><a href="">기본 인적사항</a></h3>
-      <h3>취미</h3>
+      <h3><a href="기본 인적사항.html">기본 인적사항</a></h3>
+      <h3><a href="좋아하는 것.html">좋아하는 것</a></h3>
    </div>
    <div id="section">
-       <ul>
-        <h3>
-            <li>이름</li>
-            <li>학번</li>
-            <li>생년월일</li>
-            <li>사는곳</li>
-        </h3>   
+        <img src="Nest.net 로고.png" style="float:right" width="450px" height="auto" alt="Nest.net logo" hspace="50" vspace="50">
+        <ul style="float:left">
+        <h2>
+            <li>이름 : 김상일</li>
+            <li>학번 : 2019038041</li>
+            <li>생년월일 : 1999.06.03</li>
+            <li>사는곳 : 대전 (고향 : 서울)</li>
+            <li>소속 : 충북대 소프트웨어학과 (<a href="http://nnet.cbnu.ac.kr/">Nest.net</a>)</li>
+        </h2>
        </ul>
-       <img src="C:\Users\user\Desktop\다운로드.png" alt="">
 </body>
 
 </html>
