--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
    </div>
    <div id="nav">
       <h3><a href="index.html">기본 인적사항</a></h3>
-      <h3><a href="index.html2">좋아하는 것</a></h3>
+      <h3><a href="index2.html">좋아하는 것</a></h3>
    </div>
    <div id="section">
         <img src="엔드게임.jpg" style="float:right" width="300px" height="auto" alt="End Game poster" hspace="50" vspace="50">
