--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h1>자기소개</h1>
    </div>
    <div id="nav">
-      <h3><a href="index.html.1">기본 인적사항</a></h3>
+      <h3><a href="index.html">기본 인적사항</a></h3>
       <h3><a href="index.html.2">좋아하는 것</a></h3>
    </div>
    <div id="section">
