--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li>학번 : 2019038041</li>
             <li>생년월일 : 1999.06.03</li>
             <li>사는곳 : 대전 (고향 : 서울)</li>
-            <li>소속 : 충북대 소프트웨어학과 (<a href="http://nnet.cbnu.ac.kr/">Nest.net</a>)</li>
+            <li>소속 : 충북대 소프트웨어학과 (<a href="http://nnet.cbnu.ac.kr/" target="_blank">Nest.net</a>)</li>
         </h2>
        </ul>
 </body>
