--- a/index2.html
+++ b/index2.html
@@ -46,8 +46,8 @@
             <li>스포츠 : 축구</li>
             <h3>
                <ol>
-                  <li>좋아하는 팀 : <a href="https://www.youtube.com/watch?v=RUBperF3VGE">Atletico de Madrid</a></li>
-                  <li>좋아하는 선수 : <a href="https://www.youtube.com/watch?v=U24V3u3CYsE">Antoine</a> <a href="https://www.youtube.com/watch?v=2IcnAJdIGDM">Griezmann</a></li>
+                  <li>좋아하는 팀 : <a href="https://www.youtube.com/watch?v=RUBperF3VGE" target="_blank">Atletico de Madrid</a></li>
+                  <li>좋아하는 선수 : <a href="https://www.youtube.com/watch?v=U24V3u3CYsE" target="_blank">Antoine</a> <a href="https://www.youtube.com/watch?v=2IcnAJdIGDM" target="_blank">Griezmann</a></li>
                </ol>
             </h3>
         </h2>
