--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          width:200px;
          height:750px;
          float:left;
-         text-align:center;
+         text-align:left;
       }
       #section {
          text-align:left;
@@ -33,8 +33,11 @@
       <h1>자기소개</h1>
    </div>
    <div id="nav">
-      <h3><a href="index.html">기본 인적사항</a></h3>
-      <h3><a href="index2.html">좋아하는 것</a></h3>
+      <ol>
+         <li><h3><a href="index.html">기본 인적사항</a></h3></li>
+         <li><h3><a href="index2.html">좋아하는 것</a></h3></li>
+      </ol>
+      
    </div>
    <div id="section">
         <img src="Nest.net 로고.png" style="float:right" width="450px" height="auto" alt="Nest.net logo" hspace="50" vspace="50">
