--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
          width:200px;
          height:750px;
          float:left;
-         text-align:center;
+         text-align:left;
       }
       #section {
          text-align:left;
@@ -33,25 +33,28 @@
       <h1>자기소개</h1>
    </div>
    <div id="nav">
-      <h3><a href="index.html">기본 인적사항</a></h3>
-      <h3><a href="index2.html">좋아하는 것</a></h3>
+         <ol>
+            <li><h3><a href="index.html">기본 인적사항</a></h3></li>
+            <li><h3><a href="index2.html">좋아하는 것</a></h3></li>
+         </ol>
    </div>
    <div id="section">
         <img src="엔드게임.jpg" style="float:right" width="300px" height="auto" alt="End Game poster" hspace="50" vspace="50">
         <img src="Antoine Griezmann.jpg" style="float:right" width="500px" height="auto" vspace="50" alt="Antoine Griezmann photo">
-        <img src="Atletico de Madrid.png" width="200px" style="float:right" height="auto" vspace="50" hspace="50" alt="Atletico de Madrid logo">
+        <a href="https://en.atleticodemadrid.com/" target="_blank"><img src="Atletico de Madrid.png" width="200px" style="float:right" height="auto" vspace="50" hspace="50" alt="Atletico de Madrid logo"></a>
         <ul style="float:left">
         <h2>
             <li>영화 : 어벤져스 엔드게임</li>
             <li>스포츠 : 축구</li>
             <h3>
-               <ol>
+               <ul>
                   <li>좋아하는 팀 : <a href="https://www.youtube.com/watch?v=RUBperF3VGE" target="_blank">Atletico de Madrid</a></li>
                   <li>좋아하는 선수 : <a href="https://www.youtube.com/watch?v=U24V3u3CYsE" target="_blank">Antoine</a> <a href="https://www.youtube.com/watch?v=2IcnAJdIGDM" target="_blank">Griezmann</a></li>
-               </ol>
+               </ul>
             </h3>
         </h2>
        </ul>
+       <iframe width="480px" height="270px" src="https://www.youtube.com/embed/sz6cuzMzrFE" margin-left="50px" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </body>
 
 </html>
